# tgbot

./: .dockerignore  .gitignore  Dockerfile  README.md  ansible.cfg  docker-compose.yml  py310.dockerfile  pyproject.toml  tox.ini
.github/: CODEOWNERS
.github/workflows/: ci.yml  invite.yml  merge.yml  pr.yml
contrib/: postgres.sql  sqlite.sql
contrib/migrations/: 001_init.sql  002_add_wallets.sql  003_refactoring.sql
deploy/: install.yml  inventory.ini
deploy/templates/: system.service.j2
src/tgbot/: cli.py  deps.py  pool_wrapper.py  price.py  registry.py  sentry_aiogram_integration.py  tg_server.py  types.py  utils.py  web.py  web_startup.py  workers.py
src/tgbot/clients/: duck_duck_go.py  http_executor.py  http_yandex_search.py
src/tgbot/entities/: executor.py  user.py  web.py
src/tgbot/repositories/: bash.py  docker.py  docker_files.py  http_openai.py  http_telegraf.py  http_text_browser.py  invite.py  sql_chat_messages.py  sql_init.py  sql_schema_migrations.py  sql_users.py  sql_wallets.py  sql_wallets_history.py
src/tgbot/servicecs/: ai.py  migrations.py  user.py  wallet.py
src/tgbot/settings/: base.py  prod.py  test.py
tests/: conftest.py  pytest.ini  test_completion.py  test_migration.py  test_start.py
