[tool.poetry]
name = "tgbot"
version = "0.1.0"
description = ""
authors = ["Ilya Chistyakov <ilchistyakov@gmail.com>"]
readme = "README.md"

[tool.poetry.scripts]
tgbot = "tgbot.cli:cli"

[tool.poetry.dependencies]
python = "^3.12"
openai = "^1"
aiogram = "^3.1.1"
aiosqlite = "^0.19.0"
click = "^8.1.7"
simple-settings = "^1.2.0"
pyjwt = "^2.8.0"
aiohttp = "^3.9.1"
backoff = "^2.2.1"
markdownify = "^0.12.1"
httpx = "^0.27.0"
statsd = "^4.0.1"
sentry-sdk = "^2.3.1"

[tool.poetry.group.dev.dependencies]
flake8 = "^6"
pytest = "^7"
aiohttp = "^3"
pytest-asyncio = "^0.21.1"
pyright = "^1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
